--- a/404.html
+++ b/404.html
@@ -1,22 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Oops - PUCD 2025 Core Studio Typography</title>
+        <title>Oops - Visualizing Language II</title>
         <meta name="viewport" content="width=device-width">
         <meta charset="UTF-8">
         <link href="styles.css" type="text/css" rel="stylesheet">
-<style type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 
-
-        </style>
 
     </head>
     <body>
         <header>
-            <h1><a href="index.html">Core Studio Typography</a></h1>
-            <p>Mondays and Thursdays 9:00 – 11:40am</p>
-            <p>Room 200</p>
-            <p><a href="mailto:fullerj@newschool.edu">Jarrett Fuller</a></p>
+            <h1><a href="index.html">Visualizing Language II</a></h1>
+            <p>Tuesdays, 1:00 – 6:50pm</p>
+            <p><a href="mailto:jarrettfuller@gmail.com">Jarrett Fuller</a></p>
         </header>
 
         <nav><a href="syllabus.html">Syllabus</a> | <a href="reading.html">Reading</a> | <a href="resources.html">Resources</a> | <a href="">Google Drive</a>
