--- a/resources.html
+++ b/resources.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Visualizing Language II</title>
+        <title>Resources - Visualizing Language II</title>
         <meta name="viewport" content="width=device-width">
         <meta charset="UTF-8">
         <link href="styles.css" type="text/css" rel="stylesheet">
