--- a/resources.html
+++ b/resources.html
@@ -31,6 +31,7 @@
                 <h3>Class PDFs</h3>
                 <div class="class">
                     <p><a href="downloads/08.26.17_visualizing-langauge-syllabus.pdf">Syllabus</a></p>
+                    <p><a href="downloads/how-to-critique.pdf">Critique Guide</a></p>
 
                 </div>
             </div>
