added publication terms pdf

--- a/resources.html
+++ b/resources.html
@@ -32,6 +32,7 @@
                 <div class="class">
                     <p><a href="downloads/08.26.17_visualizing-langauge-syllabus.pdf">Syllabus</a></p>
                     <p><a href="downloads/how-to-critique.pdf">Critique Guide</a></p>
+                    <p><a href="downloads/publication-terms.pdf">Publication Terms</a></p>
 
                 </div>
             </div>
