added project 2 worksheet

--- a/resources.html
+++ b/resources.html
@@ -33,6 +33,7 @@
                     <p><a href="downloads/08.26.17_visualizing-langauge-syllabus.pdf">Syllabus</a></p>
                     <p><a href="downloads/how-to-critique.pdf">Critique Guide</a></p>
                     <p><a href="downloads/publication-terms.pdf">Publication Terms</a></p>
+                    <p><a href="downloads/project_2-publication.pdf">Project 2: Print/Digital Publication</a></p>
 
                 </div>
             </div>
