--- a/syllabus.html
+++ b/syllabus.html
@@ -97,7 +97,7 @@ Consider how publication identity is maintained in multiple formats.</li>
                         <div class="syllabus">
                 <h3>Week 5 (or 6)</h3>
                 <div class="class">
-                    <p><b>Project 2: Cross Platform Publication</b></p>
+                    <p><b><a href="downloads/project_2-publication.pdf">Project 2: Cross Platform Publication</a></b></p>
 
                     <p>
                     <ul>
