added grid presentation

--- a/resources.html
+++ b/resources.html
@@ -34,6 +34,7 @@
                     <p><a href="downloads/how-to-critique.pdf">Critique Guide</a></p>
                     <p><a href="downloads/publication-terms.pdf">Publication Terms</a></p>
                     <p><a href="downloads/project_2-publication.pdf">Project 2: Print/Digital Publication</a></p>
+                    <p><a href="downloads/10.31.17_grids.pdf">How to work with Grids</a></p>
 
                 </div>
             </div>
