added digital project sheet

--- a/resources.html
+++ b/resources.html
@@ -36,6 +36,7 @@
                     <p><a href="downloads/project_2-publication.pdf">Project 2: Print/Digital Publication</a></p>
                     <p><a href="downloads/10.31.17_grids.pdf">How to work with Grids</a></p>
                     <p><a href="downloads/11.14.17_layout.pdf">Presentation: Dynamic Layouts</a></p>
+                    <p><a href="downloads/11.27.17_project2b-digital.pdf">Project 2b: Digital Publication</a></p>
 
                 </div>
             </div>
