updated for fall 2018 class

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <meta charset="UTF-8">
         <link href="styles.css" type="text/css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
 
 
     </head>
@@ -13,13 +13,29 @@
         <header>
             <h1><a href="index.html">Visualizing Language II</a></h1>
             <p>Tuesdays, 1:00 – 6:50pm</p>
-            <p><a href="mailto:jarrettfuller@gmail.com">Jarrett Fuller</a></p>
+            <p><a href="mailto:jarfuller@uarts.edu">Jarrett Fuller</a></p>
         </header>
 
-        <nav><a href="syllabus.html">Syllabus</a> | <a href="reading.html">Reading</a> | <a href="resources.html">Resources</a> | <a href="">Google Drive</a>
+        <nav><a href="syllabus.html">Syllabus</a> | <a href="reading.html">Reading</a> | <a href="resources.html">Resources</a> | <a href="https://drive.google.com/open?id=1HZ-VAof8p5F4cwTJWPE-Pn3Mn7XfPiq6">Google Drive</a>
         </nav>
 
+        <article>
+            <div class="syllabus">
+        <p><img src="05-nymag-first-issue-lede.w512.h600.2x.jpg"></p>
+</div>
 
+            <div class="syllabus">
+                <h3></h3>
+            <div class="class"><p>The cover of <i>New York</i> magazine's first issue, April 1968</p>
+
+                </div>
+            </div>
+
+                    <div class="syllabus">
+                <h3></h3>
+            <p class="divider">--</p>
+                </div>
+        </article>
 
     </body>
 </html>
