--- a/resources.html
+++ b/resources.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <meta charset="UTF-8">
         <link href="styles.css" type="text/css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
 
 
     </head>
@@ -13,10 +13,10 @@
         <header>
             <h1><a href="index.html">Visualizing Language II</a></h1>
             <p>Tuesdays, 1:00 – 6:50pm</p>
-            <p><a href="mailto:jarrettfuller@gmail.com">Jarrett Fuller</a></p>
+            <p><a href="mailto:jarfuller@uarts.edu">Jarrett Fuller</a></p>
         </header>
 
-        <nav><a href="syllabus.html">Syllabus</a> | <a href="reading.html">Reading</a> | <a href="resources.html">Resources</a> | <a href="">Google Drive</a>
+        <nav><a href="syllabus.html">Syllabus</a> | <a href="reading.html">Reading</a> | <a href="resources.html">Resources</a> | <a href="https://drive.google.com/open?id=1HZ-VAof8p5F4cwTJWPE-Pn3Mn7XfPiq6">Google Drive</a>
         </nav>
 
         <article>
@@ -32,13 +32,50 @@
                 <div class="class">
                     <p><a href="downloads/08.26.17_visualizing-langauge-syllabus.pdf">Syllabus</a></p>
                     <p><a href="downloads/how-to-critique.pdf">Critique Guide</a></p>
-                    <p><a href="downloads/publication-terms.pdf">Publication Terms</a></p>
-                    <p><a href="downloads/project_2-publication.pdf">Project 2: Print/Digital Publication</a></p>
-                    <p><a href="downloads/10.31.17_grids.pdf">How to work with Grids</a></p>
-                    <p><a href="downloads/11.14.17_layout.pdf">Presentation: Dynamic Layouts</a></p>
-                    <p><a href="downloads/11.27.17_project2b-digital.pdf">Project 2b: Digital Publication</a></p>
 
                 </div>
+            </div>
+
+              <div class="syllabus">
+                <h3>Typographers/People of Interest</h3>
+                    <div class="class">
+                        <p><a href="http://www.colophon-foundry.org/typefaces/">Colophon Foundry</a></p>
+                        <p><a href="https://commercialtype.com">Commercial Type</a></p>
+                        <p><a href="https://www.experimentaljetset.nl">Experimental Jetset</a></p>
+                        <p><a href="https://frerejones.com">Frere-Jones</a></p>
+                        <p><a href="https://www.typography.com">Hoefler & Co.</a></p>
+                        <p><a href="http://in-fo.co">Inventory Form and Content</a></p>
+                        <p><a href="http://projects.jennyholzer.com/projections">Jenny Holzer</a></p>
+                        <p><a href="http://erichu.info">Eric Hu</a></p>
+                        <p><a href="https://www.creativereview.co.uk/susan-kare-apple/">Susan Kare</a></p>
+                        <p><a href="https://klim.co.nz">Klim Type Foundry</a></p>
+                        <p><a href="https://www.artsy.net/artist/barbara-kruger">Barbara Kruger</a></p>
+                        <p><a href="http://www.tracyma.com">Tracy Ma</a></p>
+                        <p><a href="https://www.itsnicethat.com/articles/karel-martens">Karel Martens</a></p>
+                        <p><a href="https://www.milieugrotesque.com">Milieu Grotesque</a></p>
+                        <p><a href="http://www.monotype.com">Monotype</a></p>
+                        <p><a href="http://othermeans.us">Other Means</a></p>
+                        <p><a href="http://studio.harshpatel.com">Harsh Patel</a></p>
+                        <p><a href="http://davidrudnick.org">David Rudnick</a></p>
+                        <p><a href="https://www.schick-toikka.com">Schick Toikka</a></p>
+                        <p><a href="http://www.sulki-min.com/wp/">Sulki-Min</a></p>
+                        <p><a href="https://www.aiga.org/medalist-deborahsussman">Deborah Sussman</a></p>
+                        <p><a href="https://www.lissongallery.com/artists/lawrence-weiner">Lawrence Weiner</a></p>
+                        <p><a href="http://www.wkshps.com">Wkshps</a></p>
+
+                    </div>
+            </div>
+
+            <div class="syllabus">
+                <h3>References</h3>
+                    <div class="class">
+                        <p><a href="http://readings.design">readings.design</a></p>
+                        <p><a href="http://thinkingwithtype.com">Thinking With Type website</a></p>
+                        <p><a href="http://webtypography.net">The Elements of Typographic Style Applied to the Web</a></p>
+                        <p><a href="http://typographyforlawyers.com"><i>Typography for Lawyers</i></a></p>
+                        <p><a href="https://are.na/jarrett-fuller">Are.na</a></p>
+
+                    </div>
             </div>
 
             <div class="syllabus">
@@ -50,17 +87,6 @@
 
                     </div>
             </div>
-
-            <div class="syllabus">
-                <h3>References</h3>
-                    <div class="class">
-                        <p><a href="http://thinkingwithtype.com">Thinking With Type website</a></p>
-                        <p><a href="http://webtypography.net">The Elements of Typographic Style Applied to the Web</a></p>
-                        <p><a href="http://typographyforlawyers.com"><i>Typography for Lawyers</i></a></p>
-
-                    </div>
-            </div>
-
 
 
             <div class="syllabus">
