--- a/syllabus.html
+++ b/syllabus.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width">
         <meta charset="UTF-8">
         <link href="styles.css" type="text/css" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Karla:400,400i,700,700i" rel="stylesheet">
 
 
     </head>
@@ -13,10 +13,10 @@
         <header>
             <h1><a href="index.html">Visualizing Language II</a></h1>
             <p>Tuesdays, 1:00 – 6:50pm</p>
-            <p><a href="mailto:jarrettfuller@gmail.com">Jarrett Fuller</a></p>
+            <p><a href="mailto:jarfuller@uarts.edu">Jarrett Fuller</a></p>
         </header>
 
-        <nav><a href="syllabus.html">Syllabus</a> | <a href="reading.html">Reading</a> | <a href="resources.html">Resources</a> | <a href="">Google Drive</a>
+        <nav><a href="syllabus.html">Syllabus</a> | <a href="reading.html">Reading</a> | <a href="resources.html">Resources</a> | <a href="https://drive.google.com/open?id=1HZ-VAof8p5F4cwTJWPE-Pn3Mn7XfPiq6">Google Drive</a>
         </nav>
 
         <article>
@@ -29,116 +29,123 @@
             </div>
 
         <div class="syllabus">
-                <h3>Week 1</h3>
+                <h3>August 28</h3>
                 <div class="class">
-                    <p><b>Project 1: Cross Platform Publication - research, analysis and presentation
-</b></p>
-
-                    <p><ul>
-                    <li>
-                    Groups of two–three will be formed and publications selected from the list at right.</li>
-<li>Working in those groups, we will begin to analyze and identify the grid structure(s) and typographic hierarchy of one printed issue of the chosen publication.</li>
-                    <li>Dissect the publication’s overall content structure.</li>
-<li>Pay careful attention to grid structures, typographic form (font, leading, size).</li>
-<li>Identify elements of typographic hierarchy (headlines, titles, call outs, captions, etc...).</li>
-<li>Identify additional design elements.</li>
-<li>Consider the relationship of visual styles to content and be ready to talk about it.</li>
-<li>Delegate take-home tasks within group.</li></ul></p>
-
-                </div>
+                    <p>Class introduction, Syllabus, grading, etc.</p>
+                    <p>ASSIGNMENT: <a href="https://docs.google.com/document/d/1r_bPlfeReA1oINtR8CBAQyqRIJq1gTD3qMF05SF0uas/edit?usp=sharing">Begin Project 1</a></p>
             </div>
+        </div>
 
-                <div class="syllabus">
-                <h3>Week 2</h3>
+        <div class="syllabus">
+                <h3>September 4</h3>
                 <div class="class">
-                    <p>
-                        <ul>
-                            <li>Still working in groups, synthesize Week 1 research into a presentable format.</li>
-<li>Establish presentation format, and distill and organize  findings.</li>
-<li>Delegate take-home tasks within group.</li>
-                            </ul>
-                    </p>
-
-                </div>
+                    <p>IN CLASS: continue work on Project 1</p>
             </div>
+        </div>
 
-                <div class="syllabus">
-                <h3>Week 3-4</h3>
+        <div class="syllabus">
+                <h3>September 11</h3>
                 <div class="class">
-                    <p>
-                    <ul>
-                        <li>Finalize presentations, group work sessions with instructor critique.</li>
-<li>Present final research and analysis in group critique.
-                        </li></ul>
-
-                    </p>
-
-                </div>
+                    <p>LECTURE: Publication Terms</p>
+                    <p>IN CLASS: small group critiques, continue work on Project 1</p>
             </div>
+        </div>
 
-                        <div class="syllabus">
-                <h3>Week 4-5 (or 6)</h3>
+        <div class="syllabus">
+                <h3>September 18</h3>
                 <div class="class">
-                    <p>
-                    <ul>
-                    <li>Repeat process with parallel digital version(s) of chosen publication, paying special attention to how content and form are adapted to screen-based media.</li>
-<li>Pay attention to factors effecting on-screen legibility.
-Consider how publication identity is maintained in multiple formats.</li>
-<li>Building on established presentation format, distill and organize  findings.</li>
-<li>Present  final research and analysis in group critique.
-
-                        </li></ul>
-
-                    </p>
-
-                </div>
+                    <p>IN CLASS: continue work on Project 1</p>
             </div>
+        </div>
 
-                        <div class="syllabus">
-                <h3>Week 5 (or 6)</h3>
+        <div class="syllabus">
+                <h3>September 25</h3>
                 <div class="class">
-                    <p><b><a href="downloads/project_2-publication.pdf">Project 2: Cross Platform Publication</a></b></p>
-
-                    <p>
-                    <ul>
-                    <li>
-                        Project introduction. Select a topic, theme or unifying concept and design a proposal for a cross-platform (print / digital) publication. You may collect content for this proposal from varying sources as long as they are cited. Discussion of what constitutes a proposal and all specific requirements for the  final form/ presentation will be discussed in class, and a project brief distributed.</li></ul></p>
-
-                </div>
+                    <p>IN CLASS: Present Magazine Analysis (submit to <a href="https://drive.google.com/open?id=1NID6EKyo8_uWh-bkNe1LfLCN25bvJTSF">Google Drive</a>)</p>
+                    <p>ASSIGNMENT: <a href="https://docs.google.com/document/d/1SJ0YKtLPecOnaaDgVSbg-UOjxTDeo2I7EF11k5-gDtg/edit?usp=sharing">Begin Project 2a</a> / prepare magazine concepts</p>
             </div>
+        </div>
 
-                <div class="syllabus">
-                <h3>Week 6 (or 7)</h3>
+        <div class="syllabus">
+                <h3>October 2</h3>
                 <div class="class">
-                    <p><ul>
-                    <li>
-                    Present three topics for consideration and how they will migrate from print to digital mediums.</li>
-<li>Discuss content development/collection and typographic profiles.</li>
-<li>Select one topic for development.</li>
-<li>Develop grid systems and typographic profiles.
-                    </li></ul>
-                    </p>
-
-                </div>
+                    <p>*IN CLASS: Present Magazine Concepts*</p>
+                    <p>ASSIGNMENT: choose one concept and begin type studies</p>
             </div>
+        </div>
 
-
-                <div class="syllabus">
-                <h3>Week 7 - 14</h3>
+        <div class="syllabus">
+                <h3>October 9</h3>
                 <div class="class">
-                    <p><ul><li>Develop print and digital formats.</li></ul></p>
-
-
-                </div>
+                    <p>LECTURE: Working with grids</p>
+                    <p>IN CLASS: work on Project 2, individual meetings</p>
             </div>
+        </div>
 
-                <div class="syllabus">
-                <h3>Week 15</h3>
+        <div class="syllabus">
+                <h3>October 16</h3>
                 <div class="class">
-                    <p><ul><li>Final presentation</li></ul></p>
-
-                </div>
+                    <p>*FULL CLASS CRITIQUE*</p>
+                    <p>IN CLASS: work on Project 2</p>
             </div>
+        </div>
+
+        <div class="syllabus">
+                <h3>October 23</h3>
+                <div class="class">
+                    <p>LECTURE: Dynamic Layouts</p>
+                    <p>IN CLASS: work on Project 2</p>
+            </div>
+        </div>
+
+        <div class="syllabus">
+                <h3>October 30</h3>
+                <div class="class">
+                    <p>*FULL CLASS CRITIQUE*</p>
+                    <p>IN CLASS: work on Project 2</p>
+            </div>
+        </div>
+
+        <div class="syllabus">
+                <h3>November 6</h3>
+                <div class="class">
+                    <p>LECTURE: Print to Digital</p>
+                    <p>IN CLASS: work on Project 2</p>
+                    <p>ASSIGNMENT: <a href="https://docs.google.com/document/d/166QDAD6IOSFW7_t40rIoCsmeybY2GifbLiNUsY4K8Zo/edit?usp=sharing">Begin Project 2b</a></p>
+            </div>
+        </div>
+
+            <div class="syllabus">
+                <h3>November 13</h3>
+                <div class="class">
+                    <p>*FULL CLASS CRITIQUE</p>
+                    <p>IN CLASS: work on Project 2b</p>
+                    <p>ASSIGNMENT: send Project 2a to print</p>
+            </div>
+        </div>
+
+        <div class="syllabus">
+                <h3>November 20</h3>
+                <div class="class">
+                    <p>NO CLASS (Classes meet on Friday schedule)</p>
+            </div>
+        </div>
+
+        <div class="syllabus">
+                <h3>November 27</h3>
+                <div class="class">
+                    <p>*FULL CLASS CRITIQUE*</p>
+                    <p>IN CLASS: work on Project 2b</p>
+            </div>
+        </div>
+
+        <div class="syllabus">
+                <h3>December 4</h3>
+                <div class="class">
+                    <p>LAST CLASS: Final presentations</p>
+                    <p>Project 2 due <a href="https://drive.google.com/drive/folders/1HZ-VAof8p5F4cwTJWPE-Pn3Mn7XfPiq6?usp=sharing">in Google Drive</a></p>
+            </div>
+        </div>
 
 <div class="syllabus">
                 <h3></h3>
