--- a/resources.html
+++ b/resources.html
@@ -30,7 +30,7 @@
             <div class="syllabus">
                 <h3>Class PDFs</h3>
                 <div class="class">
-                    <p><a href="downloads/08.26.17_visualizing-langauge-syllabus.pdf">Syllabus</a></p>
+                    <p><a href="downloads/visualizing-language-syllabus.pdf">Syllabus</a></p>
                     <p><a href="downloads/how-to-critique.pdf">Critique Guide</a></p>
 
                 </div>
