--- a/syllabus.html
+++ b/syllabus.html
@@ -23,7 +23,7 @@
             <div class="syllabus">
                 <h3></h3>
                 <div class="class"><h2>Syllabus</h2>
-            <p>Subject to change. <a href="downloads/08.26.17_visualizing-langauge-syllabus.pdf">Download PDF version</a></p>
+            <p>Subject to change. <a href="downloads/visualizing-language-syllabus.pdf">Download PDF version</a></p>
                 <p class="divider">--</p>
                 </div>
             </div>
