added project 1 sheet

--- a/resources.html
+++ b/resources.html
@@ -36,6 +36,14 @@
                 </div>
             </div>
 
+                        <div class="syllabus">
+                <h3>Projects</h3>
+                <div class="class">
+                    <p><a href="https://docs.google.com/document/d/1r_bPlfeReA1oINtR8CBAQyqRIJq1gTD3qMF05SF0uas/edit?usp=sharing">Project 1</a></p>
+
+                </div>
+            </div>
+
               <div class="syllabus">
                 <h3>Typographers/People of Interest</h3>
                     <div class="class">
