added process book assignment

--- a/resources.html
+++ b/resources.html
@@ -39,7 +39,8 @@
                         <div class="syllabus">
                 <h3>Projects</h3>
                 <div class="class">
-                    <p><a href="https://docs.google.com/document/d/1r_bPlfeReA1oINtR8CBAQyqRIJq1gTD3qMF05SF0uas/edit?usp=sharing">Project 1</a></p>
+                    <p><a href="https://drive.google.com/open?id=1_8s4Xzh41wEsXNFcGBJt2oWdsiU1Ce5WtN8G2z8zLPM">Project 0: Process Book / Image File</a></p>
+                    <p><a href="https://docs.google.com/document/d/1r_bPlfeReA1oINtR8CBAQyqRIJq1gTD3qMF05SF0uas/edit?usp=sharing">Project 1: Magazine Analysis</a></p>
 
                 </div>
             </div>
