added magazine terms presentation

--- a/resources.html
+++ b/resources.html
@@ -32,6 +32,7 @@
                 <div class="class">
                     <p><a href="downloads/visualizing-language-syllabus.pdf">Syllabus</a></p>
                     <p><a href="downloads/how-to-critique.pdf">Critique Guide</a></p>
+                    <p><a href="https://drive.google.com/open?id=1sM8VzE2oXFJmAWRLNy7_ZH-XPFcTvfce">Magazine Terms Presentation</a></p>
 
                 </div>
             </div>
