--- a/syllabus.html
+++ b/syllabus.html
@@ -85,7 +85,7 @@
         <div class="syllabus">
                 <h3>October 16</h3>
                 <div class="class">
-                    <p>*FULL CLASS CRITIQUE*</p>
+                    <p>LECTURE: Hierarcy and Type Treatments</p>
                     <p>IN CLASS: work on Project 2</p>
             </div>
         </div>
@@ -94,6 +94,7 @@
                 <h3>October 23</h3>
                 <div class="class">
                     <p>LECTURE: Dynamic Layouts</p>
+                    <p>*FULL CLASS CRITIQUE*</p>
                     <p>IN CLASS: work on Project 2</p>
             </div>
         </div>
@@ -101,7 +102,6 @@
         <div class="syllabus">
                 <h3>October 30</h3>
                 <div class="class">
-                    <p>*FULL CLASS CRITIQUE*</p>
                     <p>IN CLASS: work on Project 2</p>
             </div>
         </div>
@@ -109,18 +109,17 @@
         <div class="syllabus">
                 <h3>November 6</h3>
                 <div class="class">
-                    <p>LECTURE: Print to Digital</p>
+                    <p>*FULL CLASS CRITIQUE*</p>
                     <p>IN CLASS: work on Project 2</p>
-                    <p>ASSIGNMENT: <a href="https://docs.google.com/document/d/166QDAD6IOSFW7_t40rIoCsmeybY2GifbLiNUsY4K8Zo/edit?usp=sharing">Begin Project 2b</a></p>
             </div>
         </div>
 
             <div class="syllabus">
                 <h3>November 13</h3>
                 <div class="class">
-                    <p>*FULL CLASS CRITIQUE</p>
-                    <p>IN CLASS: work on Project 2b</p>
-                    <p>ASSIGNMENT: send Project 2a to print</p>
+                    <p>LECTURE: Print to Digital</p>
+                    <p>IN CLASS: work on Project 2a</p>
+                    <p>ASSIGNMENT: send Project 2a to print, <a href="https://docs.google.com/document/d/166QDAD6IOSFW7_t40rIoCsmeybY2GifbLiNUsY4K8Zo/edit?usp=sharing">Begin Project 2b</a></p>
             </div>
         </div>
 
